--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,7 +6,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url("../../public/img/loading-bg-back.png") no-repeat center;
+    background: url("../img/loading-bg-back.png") no-repeat center;
     background-size: cover;
 }
 
@@ -15,7 +15,7 @@
     height: 100%;
     width: 100%;
     left: 0;
-    background: url("../../public/img/loading-bg-front-left.png") no-repeat left fixed;
+    background: url("../img/loading-bg-front-left.png") no-repeat left fixed;
     background-size: contain;
 }
 
@@ -24,12 +24,12 @@
     height: 100%;
     width: 100%;
     right: 0;
-    background: url("../../public/img/loading-bg-front-right.png") no-repeat right fixed;
+    background: url("../img/loading-bg-front-right.png") no-repeat right fixed;
     background-size: contain;
 }
 
 body {
-    @apply bg-indigo-500 text-white
+    @apply text-white
 }
 
 .information-container {
@@ -67,7 +67,7 @@ body {
 }
 
 .step-back-information {
-    @apply absolute w-10 h-10 top-0 right-0 m-10 bg-black;
+    @apply absolute w-10 h-10 top-0 right-0 m-10;
     z-index: 50;
 }
 
@@ -85,7 +85,7 @@ body {
 }
 
 .start-button {
-    @apply w-40 h-40 bg-black;
+    @apply w-40 h-40;
 }
 
 .step-2, .step-3 {
@@ -102,5 +102,261 @@ body {
 }
 
 .step-button {
-    @apply w-16 h-16 bg-black self-center mt-16
+    @apply w-16 h-16 self-center mt-16
+}
+
+.step-img {
+    @apply absolute;
+}
+
+.step-img-dinner {
+    @apply w-full bottom-0 fixed inset-x-0 text-center
+}
+
+.step-img-dinner img {
+    @apply w-3/5 text-center m-auto
+}
+
+.step-img-return{
+    @apply fixed right-0;
+}
+
+.step-img-return-p1{
+    margin-top: 22%;
+    margin-right: 20%;
+    z-index: 30;
+}
+
+.step-img-return-p3{
+    margin-top: 20%;
+    margin-right: 30%;
+    z-index: 30;
+}
+
+.step-img-return-t{
+    margin-top: 18%;
+    margin-right: 7%;
+    z-index: 20;
+}
+
+.step-img-cleaning{
+    @apply fixed left-0;
+}
+
+.step-img-cleaning-win {
+    margin-top: 12%;
+    margin-left: 7%;
+    z-index: 20;
+}
+
+.step-img-cleaning-sofa {
+    margin-top: 16%;
+    margin-left: 13%;
+    z-index: 20;
+}
+
+.step-img-cleaning-mach {
+    margin-top: 23%;
+    margin-left: 11%;
+    z-index: 20;
+}
+
+//deng
+
+@media screen and (max-width: 768px) {
+    .xnkl {
+        display: none;
+    }
+}
+
+.deng-box {
+    position: fixed;
+    top: 40px;
+    right: 150px;
+    z-index: 9999;
+    pointer-events: none;
+}
+
+.deng-box1 {
+    position: fixed;
+    top: 30px;
+    right: 10px;
+    z-index: 9999;
+    pointer-events: none
+}
+
+.deng-box2 {
+    position: fixed;
+    top: 40px;
+    left: 150px;
+    z-index: 9999;
+    pointer-events: none
+}
+
+.deng-box3 {
+    position: fixed;
+    top: 30px;
+    left: 10px;
+    z-index: 9999;
+    pointer-events: none
+}
+
+.deng-box1 .deng,
+.deng-box3 .deng {
+    position: relative;
+    width: 120px;
+    height: 90px;
+    margin: 50px;
+    background: #d8000f;
+    background: rgba(216, 0, 15, .8);
+    border-radius: 50% 50%;
+    -webkit-transform-origin: 50% -100px;
+    -webkit-animation: swing 5s infinite ease-in-out;
+    box-shadow: -5px 5px 30px 4px #fc903d
+}
+
+.deng {
+    position: relative;
+    width: 120px;
+    height: 90px;
+    margin: 50px;
+    background: #d8000f;
+    background: rgba(216, 0, 15, .8);
+    border-radius: 50% 50%;
+    -webkit-transform-origin: 50% -100px;
+    -webkit-animation: swing 3s infinite ease-in-out;
+    box-shadow: -5px 5px 50px 4px #fa6c00
+}
+
+.deng-a {
+    width: 100px;
+    height: 90px;
+    background: #d8000f;
+    background: rgba(216, 0, 15, .1);
+    margin: 12px 8px 8px 8px;
+    border-radius: 50% 50%;
+    border: 2px solid #dc8f03
+}
+
+.deng-b {
+    width: 45px;
+    height: 90px;
+    background: #d8000f;
+    background: rgba(216, 0, 15, .1);
+    margin: -4px 8px 8px 26px;
+    border-radius: 50% 50%;
+    border: 2px solid #dc8f03
+}
+
+.xian {
+    position: absolute;
+    top: -20px;
+    left: 60px;
+    width: 2px;
+    height: 20px;
+    background: #dc8f03
+}
+
+.shui-a {
+    position: relative;
+    width: 5px;
+    height: 20px;
+    margin: -5px 0 0 59px;
+    -webkit-animation: swing 4s infinite ease-in-out;
+    -webkit-transform-origin: 50% -45px;
+    background: orange;
+    border-radius: 0 0 5px 5px
+}
+
+.shui-b {
+    position: absolute;
+    top: 14px;
+    left: -2px;
+    width: 10px;
+    height: 10px;
+    background: #dc8f03;
+    border-radius: 50%
+}
+
+.shui-c {
+    position: absolute;
+    top: 18px;
+    left: -2px;
+    width: 10px;
+    height: 35px;
+    background: orange;
+    border-radius: 0 0 0 5px
+}
+
+.deng:before {
+    position: absolute;
+    top: -7px;
+    left: 29px;
+    height: 12px;
+    width: 60px;
+    content: " ";
+    display: block;
+    z-index: 999;
+    border-radius: 5px 5px 0 0;
+    border: solid 1px #dc8f03;
+    background: orange;
+    background: linear-gradient(to right, #dc8f03, orange, #dc8f03, orange, #dc8f03)
+}
+
+.deng:after {
+    position: absolute;
+    bottom: -7px;
+    left: 10px;
+    height: 12px;
+    width: 60px;
+    content: " ";
+    display: block;
+    margin-left: 20px;
+    border-radius: 0 0 5px 5px;
+    border: solid 1px #dc8f03;
+    background: orange;
+    background: linear-gradient(to right, #dc8f03, orange, #dc8f03, orange, #dc8f03)
+}
+
+.deng-t {
+    font-family: 黑体, Arial, Lucida Grande, Tahoma, sans-serif;
+    font-size: 3.2rem;
+    color: #dc8f03;
+    font-weight: 700;
+    line-height: 85px;
+    text-align: center
+}
+
+.night .deng-box,
+.night .deng-box1,
+.night .deng-t {
+    background: 0 0 !important
+}
+
+@-moz-keyframes swing {
+    0% {
+        -moz-transform: rotate(-10deg)
+    }
+
+    50% {
+        -moz-transform: rotate(10deg)
+    }
+
+    100% {
+        -moz-transform: rotate(-10deg)
+    }
+}
+
+@-webkit-keyframes swing {
+    0% {
+        -webkit-transform: rotate(-10deg)
+    }
+
+    50% {
+        -webkit-transform: rotate(10deg)
+    }
+
+    100% {
+        -webkit-transform: rotate(-10deg)
+    }
 }
